@@ -50,21 +50,21 @@
 		<fieldset>
 			<legend>###LABEL_BLOCKS###</legend>
 			<ul class="tx_egovapi_selectorForm_blocksLeft">
-				<li><input type="checkbox" name="block[]" id="tx_egovapi_block1" value="1" /><label for="tx_egovapi_block1">###LABEL_BLOCK_1###</label></li>
-				<li><input type="checkbox" name="block[]" id="tx_egovapi_block2" value="2" /><label for="tx_egovapi_block2">###LABEL_BLOCK_2###</label></li>
-				<li><input type="checkbox" name="block[]" id="tx_egovapi_block3" value="3" /><label for="tx_egovapi_block3">###LABEL_BLOCK_3###</label></li>
-				<li><input type="checkbox" name="block[]" id="tx_egovapi_block4" value="4" /><label for="tx_egovapi_block4">###LABEL_BLOCK_4###</label></li>
-				<li><input type="checkbox" name="block[]" id="tx_egovapi_block5" value="5" /><label for="tx_egovapi_block5">###LABEL_BLOCK_5###</label></li>
-				<li><input type="checkbox" name="block[]" id="tx_egovapi_block6" value="6" /><label for="tx_egovapi_block6">###LABEL_BLOCK_6###</label></li>
-				<li><input type="checkbox" name="block[]" id="tx_egovapi_block7" value="7" /><label for="tx_egovapi_block7">###LABEL_BLOCK_7###</label></li>
+				<li><input type="checkbox" name="tx_egovapi_selectorForm_block[]" id="tx_egovapi_block1" value="1" checked="checked" /><label for="tx_egovapi_block1">###LABEL_BLOCK_1###</label></li>
+				<li><input type="checkbox" name="tx_egovapi_selectorForm_block[]" id="tx_egovapi_block2" value="2" checked="checked" /><label for="tx_egovapi_block2">###LABEL_BLOCK_2###</label></li>
+				<li><input type="checkbox" name="tx_egovapi_selectorForm_block[]" id="tx_egovapi_block3" value="3" checked="checked" /><label for="tx_egovapi_block3">###LABEL_BLOCK_3###</label></li>
+				<li><input type="checkbox" name="tx_egovapi_selectorForm_block[]" id="tx_egovapi_block4" value="4" checked="checked" /><label for="tx_egovapi_block4">###LABEL_BLOCK_4###</label></li>
+				<li><input type="checkbox" name="tx_egovapi_selectorForm_block[]" id="tx_egovapi_block5" value="5" checked="checked" /><label for="tx_egovapi_block5">###LABEL_BLOCK_5###</label></li>
+				<li><input type="checkbox" name="tx_egovapi_selectorForm_block[]" id="tx_egovapi_block6" value="6" checked="checked" /><label for="tx_egovapi_block6">###LABEL_BLOCK_6###</label></li>
+				<li><input type="checkbox" name="tx_egovapi_selectorForm_block[]" id="tx_egovapi_block7" value="7" checked="checked" /><label for="tx_egovapi_block7">###LABEL_BLOCK_7###</label></li>
 			</ul>
 			<ul class="tx_egovapi_selectorForm_blocksRight">
-				<li><input type="checkbox" name="block[]" id="tx_egovapi_block8" value="8" /><label for="tx_egovapi_block8">###LABEL_BLOCK_8###</label></li>
-				<li><input type="checkbox" name="block[]" id="tx_egovapi_block9" value="9" /><label for="tx_egovapi_block9">###LABEL_BLOCK_9###</label></li>
-				<li><input type="checkbox" name="block[]" id="tx_egovapi_block10" value="10" /><label for="tx_egovapi_block10">###LABEL_BLOCK_10###</label></li>
-				<li><input type="checkbox" name="block[]" id="tx_egovapi_block11" value="11" /><label for="tx_egovapi_block11">###LABEL_BLOCK_11###</label></li>
-				<li><input type="checkbox" name="block[]" id="tx_egovapi_block12" value="12" /><label for="tx_egovapi_block12">###LABEL_BLOCK_12###</label></li>
-				<li><input type="checkbox" name="block[]" id="tx_egovapi_block13" value="13" /><label for="tx_egovapi_block13">###LABEL_BLOCK_13###</label></li>
+				<li><input type="checkbox" name="tx_egovapi_selectorForm_block[]" id="tx_egovapi_block8" value="8" checked="checked" /><label for="tx_egovapi_block8">###LABEL_BLOCK_8###</label></li>
+				<li><input type="checkbox" name="tx_egovapi_selectorForm_block[]" id="tx_egovapi_block9" value="9" checked="checked" /><label for="tx_egovapi_block9">###LABEL_BLOCK_9###</label></li>
+				<li><input type="checkbox" name="tx_egovapi_selectorForm_block[]" id="tx_egovapi_block10" value="10" checked="checked" /><label for="tx_egovapi_block10">###LABEL_BLOCK_10###</label></li>
+				<li><input type="checkbox" name="tx_egovapi_selectorForm_block[]" id="tx_egovapi_block11" value="11" checked="checked" /><label for="tx_egovapi_block11">###LABEL_BLOCK_11###</label></li>
+				<li><input type="checkbox" name="tx_egovapi_selectorForm_block[]" id="tx_egovapi_block12" value="12" checked="checked" /><label for="tx_egovapi_block12">###LABEL_BLOCK_12###</label></li>
+				<li><input type="checkbox" name="tx_egovapi_selectorForm_block[]" id="tx_egovapi_block13" value="13" checked="checked" /><label for="tx_egovapi_block13">###LABEL_BLOCK_13###</label></li>
 			</ul>
 		</fieldset>
 	</div>
@@ -80,7 +80,9 @@
 		</select>
 		<!-- ###LANGUAGES### [end] -->
 	</div>
-	<input type="submit" id="tx_egovapi_selectorForm_submit" value="OK" />
+	<input type="button" id="tx_egovapi_selectorForm_submit" value="OK" />
+
+	<div id="tx_egovapi_result"></div>
 </form>
 
 <!-- ###TEMPLATE### [end] -->
